--- a/TODOs.org
+++ b/TODOs.org
@@ -1,10 +1,29 @@
 * ICPC
-** [[file+emacs:/Users/Voleking/Documents/Wiki/source/_posts/skill-tree.md][Skill Tree]]
+** WAITING [[https://projecteuler.net/archives][Project Euler]]
+   SCHEDULED: <2018-05-22 Tue ++1d>
+   :PROPERTIES:
+   :LAST_REPEAT: [2018-05-21 Mon 19:15]
+   :END:
+   - State "SOMEDAY"    from "WAITING"    [2018-05-21 Mon 19:15]
+   - State "WAITING"    from "TODO"       [2018-05-11 Fri 15:21]
+   - State "DONE"       from "TODO"       [2018-03-16 Fri 09:46]
+   - State "DONE"       from "TODO"       [2018-03-15 Thu 10:23]
+** WAITING [[Leetcode][https://leetcode.com/problemset/all/]] [[https://leetcode.com/problems/random-one-question/all][Random]]
+   SCHEDULED: <2018-05-22 Tue ++1d>
+   :PROPERTIES:
+   :LAST_REPEAT: [2018-05-21 Mon 19:15]
+   :END:
+   - State "SOMEDAY"    from "WAITING"    [2018-05-21 Mon 19:15]
+   - State "WAITING"    from "TODO"       [2018-05-11 Fri 15:21]
+   - State "DONE"       from "TODO"       [2018-03-15 Thu 10:27]
 ** [[file+sys:/Users/Voleking/Library/Mobile%20Documents/iCloud~com~apple~iBooks/Documents/%E7%AE%97%E6%B3%95%E7%AB%9E%E8%B5%9B%E5%85%A5%E9%97%A8%E7%BB%8F%E5%85%B8%E7%AC%AC2%E7%89%88%20%E7%AE%97%E6%B3%95%E8%89%BA%E6%9C%AF%E4%B8%8E%E4%BF%A1%E6%81%AF%E5%AD%A6%E7%AB%9E%E8%B5%9B.epub][算法入门经典]] [[file+emacs:/Users/Voleking/Documents/Learning/CS/ICPC/Reference/aoapc-book/BeginningAlgorithmContests][Beginning Algorithm Contests]] [[http://uhunt.felix-halim.net/id/788605][uHunt :: voleking (voleking)]]
 ** [[http://wiki.gyh.me/][WIKI]]
 ** [[http://www.csie.ntnu.edu.tw/~u91029/index.html][演算法筆記]]
 ** 圆面积交
 ** 几何板子 反射
+** 牛顿迭代法
 ** [[http://blog.miskcoo.com/][Miskcoo's Space – 一个数学和计算机爱好者的博客]]
-** TODO [[https://en.wikipedia.org/wiki/Pollard%2527s_rho_algorithm#C++_code_sample][Pollard's rho algorithm - Wikipedia]]
+** [[https://en.wikipedia.org/wiki/Pollard%2527s_rho_algorithm#C++_code_sample][Pollard's rho algorithm - Wikipedia]]
 ** [[http://www.matrix67.com/blog/archives/6862][趣题：为什么偏偏是 6 格？ | Matrix67: The Aha Moments]]
+** [[https://www.zhihu.com/question/51290443/answer/318376815?utm_source=com.ideashower.readitlater.pro&utm_medium=social][为什么会想到用异或来算SG函数？它的本质是什么？ - 知乎]]
+** [[https://leetcode.com/problems/redundant-connection-ii/description/][Redundant Connection II - LeetCode]]
